--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,18 @@
         </plugin>
       </plugins>
     </pluginManagement>
+<distributionManagement>
+    <repository>
+        <id>my-internal-repo</id>
+        <name>Internal Release Repository</name>
+        <url>http://your-nexus-or-artifactory/repository/maven-releases/</url>
+    </repository>
+    <snapshotRepository>
+        <id>my-internal-snapshots</id>
+        <name>Internal Snapshot Repository</name>
+        <url>http://your-nexus-or-artifactory/repository/maven-snapshots/</url>
+    </snapshotRepository>
+</distributionManagement>
   </build>
 
 </project>
